# OmniCore

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile.ai  Dockerfile.cpp  Dockerfile.go  Dockerfile.rust  Makefile  README.md  STRUCTURE.md  docker-compose.yml
code/: Cargo.toml
code/src/: lib.rs  main.rs
code/src/gate/cli_gate/: mod.rs
code/src/shared/: mod.rs
code/src/shared/constants/: mod.rs
code/src/shared/core/: mod.rs
code/src/shared/interfaces/: mod.rs
code/src/shared/schemas/: base_log_entry.rs  log_type.rs  mod.rs  severity.rs  specialized_log_entry.rs
code/src/shared/schemas/scoring/: log_type_scoring_profile.rs  mod.rs
code/src/shared/types/: mod.rs
code/src/tablet/: mod.rs
code/src/watchtower/: log_router.rs  mod.rs  watchtower.rs
code/src/watchtower/config/: mod.rs
code/src/watchtower/events/: mod.rs
code/src/watchtower/logs/: log_entry.rs  log_writer.rs  mod.rs
code/src/watchtower/monitoring/: alignment.rs  mod.rs
code/src/watchtower/util/: mod.rs
scripts/tests/: test_watchtower_log.ps1  test_watchtower_log.sh
scrolls/: CONTRIBUTING.md  Continous_Roadmap.md  Glossary.md  design_spec.md
scrolls/DevLogs/: dev_log_0.md
scrolls/ProgressionPoint/: Phase_0_Watchtower_2.md
scrolls/progression_point/: Phase_0_Watchtower_1.md  Phase_0_Watchtower_3.md
scrolls/templates/code/: infrastructure_template.txt
scrolls/templates/docs/: dev_log_template.md  universal_scroll_template.md
scrolls/templates/scrolls/: universal_scroll_template.md
